# minecpp

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  _CMakeLists.txt  exception.hpp  main.cpp  xmake.lua
example/: 2d_transform.hpp  3d_lighting.hpp  3d_lighting_2.hpp  3d_transform.hpp  3d_transform_template.hpp  imgui.hpp  material.hpp
header-module/: gl  glm  headers  headers-test  stl
include/: gl.h  stl.hpp
include/snitch/: snitch_all.hpp
lib/: gl.lib  readme.md
model/可莉/: 可莉.pmx
render/: cube_normal.hpp  render.cpp  render.hpp  render_template.hpp  resource.hpp
shader/: fragment.glsl  vertex.glsl
shader/3d_lighting/: cube.frag.glsl  cube.vertex.glsl
shader/3d_transform/: fragment.glsl  vertex.glsl
shader/auxiliary/: fragment.glsl  vertex.glsl
shader/directional/: cube.frag.glsl
shader/lightingmapping/: cube.frag.glsl
shader/material/: cube.frag.glsl  light.vertex.glsl
shader/multi_light/: cube.frag.glsl  light.frag.glsl
src/: context.mpp  controller.hpp  controller.mpp  cube_normal.hpp  exception.hpp  exception.mpp  gui.hpp  gui.mpp  imgui.hpp  input.hpp  input.mpp  light.hpp  light.mpp  main.cpp  model.hpp  render.cpp  render.hpp  render_template.hpp  resource.hpp  resource.mpp  tool.hpp  tool.mpp  transformation.hpp  transformation.mpp  vertex.hpp  vertex.mpp
src/example/: 2d_transform.hpp  3d_lighting.hpp  3d_lighting_2.hpp  3d_transform.hpp  3d_transform_template.hpp  auxiliary.hpp  auxiliary.mpp  directional_light.hpp  imgui.hpp  (+7 more)
test/: context.cpp  gui.cpp  observableValue.cpp  resource.cpp  test1.cpp  transformation.cpp
(+5 files in other folders)
